# agentic-mcp-gateway

./: .gitignore  AGENTS.md  CHANGELOG.md  CODEX_PROJECT_PLAN.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  workflow.yaml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  create-mcp-server.md  development-plan.md  getting-started.md  promotion-checklist.md
docs/announcements/: devto-article.md  hackernews-post.md  reddit-post.md  twitter-thread.md
examples/devops-assistant/: README.md  workflow.yaml
examples/music-store/: README.md  workflow.yaml
examples/research-agent/: README.md  workflow.yaml
gateway/: __init__.py  cli.py
gateway/core/: __init__.py  config.py  llm_providers.py  models.py  orchestrator.py  router.py  state.py
gateway/mcp_client/: __init__.py  http_client.py  manager.py  stdio_client.py
gateway/observability/: __init__.py  tracer.py
gateway/server/: __init__.py  app.py
gateway/skills/: __init__.py  generator.py
scripts/: generate_demo_gif.py  record-demo.sh
servers/database/: db_helper.py  pyproject.toml  server.py
servers/filesystem/: pyproject.toml  server.py
servers/rest_api/: pyproject.toml  server.py
tests/: __init__.py  conftest.py  test_checkpointer.py  test_example_workflow_configs.py  test_human_in_the_loop.py  test_llm_providers.py  test_mcp_client.py  test_orchestrator.py  test_router.py  test_server.py  test_skill_generator.py  test_tracer.py
(+11 files in other folders)
