[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-mcp-gateway"
version = "0.1.0"
description = "A LangGraph-powered gateway for multi-MCP agent workflows."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "sinhpham" }]
dependencies = [
    "mcp[cli]>=1.0",
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "openai>=1.50",
    "anthropic>=0.30",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "starlette>=0.40",
    "uvicorn>=0.30",
    "httpx>=0.27",
    "opentelemetry-api>=1.25",
    "opentelemetry-sdk>=1.25",
    "opentelemetry-exporter-otlp>=1.25",
    "arize-phoenix>=4.0",
    "rich>=13.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]
sqlite = ["langgraph-checkpoint-sqlite>=3.0"]
all = ["agentic-mcp-gateway[sqlite,dev]"]

[project.scripts]
amcpg = "gateway.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest-cov>=4.0.0",
    "types-PyYAML>=6.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["gateway"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: end-to-end tests that boot real subprocess MCP servers",
]
